// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayListItem Component > matches snapshot when paused 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between py-1 px-3 rounded-lg cursor-pointer transition-all group
         hover:bg-blue-200 dark:hover:bg-red-200 dark:hover:text-white
         bg-gray-400 dark:bg-gray-600"
  >
    <div>
      <h4
        class="text-md font-semibold"
      >
        Song 2
      </h4>
      <p
        class="text-sm text-gray-600 group-hover:text-blue-600 dark:text-slate-300 dark:group-hover:text-red-600"
      >
        Artist 2
      </p>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <p
        class="text-xs"
      >
        4:20
      </p>
      <button
        class="p-1 rounded-full bg-gray-800 text-white"
      >
        <svg
          class="lucide lucide-play"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="6 3 20 12 6 21 6 3"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayListItem Component > matches snapshot when playing 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between py-1 px-3 rounded-lg cursor-pointer transition-all group
         bg-blue-400 text-blue-800 dark:bg-red-400 dark:text-red-800
         "
  >
    <div>
      <h4
        class="text-md font-semibold"
      >
        Song 1
      </h4>
      <p
        class="text-sm text-gray-600 group-hover:text-blue-600 dark:text-slate-300 dark:group-hover:text-red-600"
      >
        Artist 1
      </p>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <p
        class="text-xs"
      >
        3:45
      </p>
      <button
        class="p-1 rounded-full bg-gray-800 text-white"
      >
        <svg
          class="lucide lucide-pause"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="16"
            rx="1"
            width="4"
            x="14"
            y="4"
          />
          <rect
            height="16"
            rx="1"
            width="4"
            x="6"
            y="4"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
